# tam_mmaction2

./: .gitignore  CMakeLists.txt  README.md  package.xml
action/: AxActionRecognition.action
env/: tam_mmaction.def
io/action_recognition/configs/: label_map_only_wave.txt  lfb_nl_kinetics_pretrained_slowonly_r50_4x16x1_20e_ava_rgb.py
io/pose_estimation/configs/: res50_coco_640x640.py  rsn18_coco_256x192.py  seresnet50_coco_256x192.py
io/pose_estimation/configs/wholebody/: hrnet_w32_coco_wholebody_256x192_dark.py
io/rviz/: action_recognition.rviz  action_recognition_sigverse.rviz
io/tracking/configs/: custom_deepsort_faster-rcnn_fpn_4e_mot17-private-half.py  deepsort_faster-rcnn_fpn_4e_mot17-private-half.py
launch/: simple_test.launch
msg/: ActionList.msg  Ax3DPose.msg  Ax3DPoseArray.msg  Ax3DPoseWithLabel.msg  Ax3DPoseWithLabelArray.msg  AxActionRecognition.msg  AxKeyPoint.msg
msg/eol/: Ax3DPoseArray.msg  AxActionRecognition.msg
script/: action_recognition_server.py  action_recognition_utils.py  convert_utils.py
